@@ -200,7 +200,6 @@ if {![info exists gurka]} {
                     warnShortSub 0
                     strictAppend 0
                     forceElse 0
-                    noVar 1
                     severity E
                 }
             }
